issue with safari on iphones and text-shadow

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -595,6 +595,9 @@ header {
 
 .node--internal text {
   text-shadow: 0 1px 0 #fff, 0 -1px 0 #fff, 1px 0 0 #fff, -1px 0 0 #fff;
+  @media @phone-horiz {
+    text-shadow: none;
+  }
 }
 
 .link {
